@@ -971,7 +971,7 @@ For window: set current child to window or its parent according to window-parent
     (let ((parent (find-parent-frame window)))
       (with-slots ((managed forced-managed-window)
 		   (unmanaged forced-unmanaged-window)) parent
-	(setf unmanaged (remove window unmanaged :test #'child-equal-p)
+	(setf unmanaged (child-remove window unmanaged)
 	      unmanaged (remove (xlib:wm-name window) unmanaged :test #'string-equal-p))
 	(pushnew window managed))))
   (leave-second-mode))
@@ -982,7 +982,7 @@ For window: set current child to window or its parent according to window-parent
     (let ((parent (find-parent-frame window)))
       (with-slots ((managed forced-managed-window)
 		   (unmanaged forced-unmanaged-window)) parent
-	(setf managed (remove window managed :test #'child-equal-p)
+	(setf managed (child-remove window managed)
 	      managed (remove (xlib:wm-name window) managed :test #'string-equal-p))
 	(pushnew window unmanaged))))
   (leave-second-mode))
@@ -1037,7 +1037,7 @@ For window: set current child to window or its parent according to window-parent
     (when (frame-p parent)
       (with-slots (child hidden-children) parent
 	(hide-all *current-child*)
-	(setf child (remove *current-child* child :test #'child-equal-p))
+	(setf child (child-remove *current-child* child))
 	(pushnew *current-child* hidden-children)
 	(setf *current-child* parent))
       (show-all-children)))
@@ -1047,7 +1047,7 @@ For window: set current child to window or its parent according to window-parent
 (defun frame-unhide-child (hidden frame-src frame-dest)
   "Unhide a hidden child from frame-src in frame-dest"
   (with-slots (hidden-children) frame-src
-    (setf hidden-children (remove hidden hidden-children :test #'child-equal-p)))
+    (setf hidden-children (child-remove hidden hidden-children)))
   (with-slots (child) frame-dest
     (pushnew hidden child)))
 
